--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -100,7 +100,6 @@ hibernate:
 dataSource:
     pooled: true
     jmxExport: true
-    driverClassName: org.h2.Driver
     username: sa
     password: ''
 
@@ -108,28 +107,25 @@ environments:
     development:
         dataSource:
             dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:tc:postgresql:9.6.8:///dev_db
+            driverClassName: org.testcontainers.jdbc.ContainerDatabaseDriver
     test:
         dataSource:
             dbCreate: update
-            # This line is the default. The next few lines are what need to be used
-#            url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:tc:postgresql:9.6.8:///test_db
+            driverClassName: org.testcontainers.jdbc.ContainerDatabaseDriver
 
-            # These lines must be uncommented
-            url: "jdbc:postgresql://${embedded.postgresql.host}:${embedded.postgresql.port}/test_db"
-            username: "${embedded.postgresql.user}"
-            password: "${embedded.postgresql.password}"
-            driverClassName: org.postgresql.Driver
+#            https://www.testcontainers.org/modules/databases/jdbc/#database-containers-launched-via-jdbc-url-scheme
+#            url: jdbc:tc:postgresql:9.6.8///test_db/?TC_INITSCRIPT=somepath/init_mysql.sql
+#            url: jdbc:tc:postgresql:9.6.8///test_db/?TC_INITSCRIPT=file:src/main/resources/init_mysql.sql
 
-    # This is works if testcontainers-plugin for springboot exposes sys props
-#           url: jdbc:postgresql://${EMBEDDED_POSTGRESQL_HOST}:${EMBEDDED_POSTGRESQL_PORT}/test_db
-#           username: '${EMBEDDED_POSTGRESQL_USER}'
-#           password: '${EMBEDDED_POSTGRESQL_PASSWORD}'
-
+#            https://docs.docker.com/storage/tmpfs/
+#            url: jdbc:tc:postgresql:9.6.16///test_db/?TC_TMPFS=/testtmpfs:rw
     production:
         dataSource:
             dbCreate: none
-            url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:postgresql://localhost:5432/prod_db
+            driverClassName: org.postgresql.Driver
             properties:
                 jmxEnabled: true
                 initialSize: 5
